--- a/src/components/CryptocurrenciesList/index.css
+++ b/src/components/CryptocurrenciesList/index.css
@@ -1,26 +1,68 @@
-.main_heading {
-  text-align: center;
-}
-.main_img {
-  padding: 20px;
-}
-.currenciesList {
-  margin: 20px;
-  color: white;
-  margin: 15%;
-  border-style: solid;
-  border-width: 5px;
-  border-color: #00e7ff;
+.currencyItem_container {
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
 }
-.headingParas {
+
+.CryptocurrenciesList {
   display: flex;
-  justify-content: space-around;
-  background-color: #00e7ff;
-  padding: 5px;
-  font-weight: bold;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
-.rings {
+
+.heading {
+  color: #00e7ff;
+  font-weight: bold;
+  font-family: 'Roboto';
+  font-size: 30px;
   text-align: center;
+}
+
+.app_logo {
+  width: 80%;
+  margin: 10px;
+}
+
+.ul_container {
+  padding: 0px;
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  border: 3px solid #00e7ff;
+  border-radius: 5px;
+}
+
+.table_heading_container {
+  background-color: rgb(17, 61, 48);
+  padding: 8px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+}
+
+.coinType {
+  width: 60%;
+  color: white;
+  font-weight: 800;
+}
+
+.usd {
+  width: 20%;
+  color: white;
+  font-weight: 800;
+}
+
+.euro {
+  width: 20%;
+  color: white;
+  font-weight: 800;
+}
+
+.loader {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
