--- a/src/components/CryptocurrencyItem/index.css
+++ b/src/components/CryptocurrencyItem/index.css
@@ -1,14 +1,36 @@
-.CryptocurrencyItem {
+.li_container {
+  margin: 5px;
+  width: 100%;
+  padding: 8px;
   display: flex;
-  justify-content: space-around;
-}
-.imageAndNameContainer {
-  display: flex;
-  justify-content: center;
   align-items: center;
 }
-.imgItem {
-  height: 20px;
-  width: 20px;
-  margin-right: 10px;
+
+.logoAndName {
+  display: flex;
+  align-items: center;
+  width: 60%;
+}
+
+.currency_logo {
+  width: 28px;
+  height: 28px;
+  border-radius: 100px;
+  margin-left: 2px;
+}
+
+.currencyName {
+  color: white;
+  font-weight: 500;
+}
+
+.usd_value {
+  color: white;
+  font-weight: 500;
+  width: 20%;
+}
+.euro_value {
+  color: white;
+  font-weight: 500;
+  width: 20%;
 }
