--- a/src/components/CryptocurrencyTracker/index.css
+++ b/src/components/CryptocurrencyTracker/index.css
@@ -1,9 +1,11 @@
-.cryptocurrencyTracker-page {
-  background-color: #000000;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+* {
+  color: #ffffff;
 }
-.main_heading {
-  color: #00e7ff;
+.CryptocurrencyTracker {
+  width: 100%;
+  min-height: 100vh;
+  background-color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
